// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GridItem gridColumn returns column position with justifyContent, when toCol is provided 1`] = `
<body>
  <div>
    <div
      data-testid="testidforGridItem"
      style="display: flex; flex-direction: row; align-items: center; justify-content: space-between;"
    />
  </div>
</body>
`;

exports[`GridItem gridColumn returns column position with when col is provided 1`] = `
<body>
  <div>
    <div
      data-testid="testidforGridItem"
      style="display: flex; flex-direction: row; align-items: center; justify-content: space-between;"
    />
  </div>
</body>
`;

exports[`GridItem gridRow returns gridRow with toRow =0 1`] = `
<body>
  <div>
    <div
      data-testid="testidforGridItem"
      style="display: flex; flex-direction: row; align-items: center; justify-content: space-between;"
    />
  </div>
</body>
`;

exports[`GridItem gridRow returns gridRow with toRow =0 2`] = `
<body>
  <div>
    <div
      data-testid="testidforGridItem"
      style="display: flex; flex-direction: row; align-items: center; justify-content: space-between;"
    />
  </div>
</body>
`;

exports[`GridItem gridRow returns gridRow with toRow and alignItems center 1`] = `
<body>
  <div>
    <div
      data-testid="testidforGridItem"
      style="display: flex; flex-direction: row; align-items: center; justify-content: space-between;"
    />
  </div>
</body>
`;

exports[`GridItem style overrides styles 1`] = `
<body>
  <div>
    <div
      data-testid="testidforGridItem"
      style="display: flex; flex-direction: column; align-items: stretch; justify-content: space-between;"
    />
  </div>
</body>
`;

exports[`GridItem style returns center 1`] = `
<body>
  <div>
    <div
      data-testid="testidforGridItem"
      style="display: flex; flex-direction: row; align-items: center; justify-content: center;"
    />
  </div>
</body>
`;

exports[`GridItem style returns default style 1`] = `
<body>
  <div>
    <div
      data-testid="testidforGridItem"
      style="display: flex; flex-direction: row; align-items: center; justify-content: space-between;"
    />
  </div>
</body>
`;

exports[`GridItem style returns flexDirection column when it is isHorizontal = false 1`] = `
<body>
  <div>
    <div
      data-testid="testidforGridItem"
      style="display: flex; flex-direction: column; align-items: stretch; justify-content: space-between;"
    />
  </div>
</body>
`;
